--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                     <img src="images/logo.png" alt="figma logo" />
                 </div>
                 <nav>
-                    <li>Home</li>
+                    <li><a href="./index.html">Home</a></li>
                     <li>Product</li>
                     <li>Pricing</li>
-                    <li>About</li>
+                    <li><a href="./about.html">About</a></li>
                     <li>Contact</li>
                     <form>
                         <input type="text" name="Email" placeholder="your email" />
