--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <div class="hero">
                 <div class="herotop">
                 <h2>Work with an amazing design</h2>
-                <p>We’re constantly trying to express ourselves and actualize our dreams. If you have the opportunity to play this game</p>
+                <p>We're constantly trying to express ourselves and actualize our dreams. If you have the opportunity to play this game</p>
                 <button>create account</button>
                 </div>
                 <div class="herosocials">
@@ -42,6 +42,153 @@
                 </div>
             </div>
     </div>
+    <div class="insight">
+        <div class="insighttext">
+            <div class="boxes">
+                <div class="box">
+                    <div class="boximage">
+                       <img src="images/intergrated.png"/>
+                    </div>
+                    <h4>Fully intergrated</h4>
+                    <p>We get insulted by others, lose trust for those We get back freezes</p>
+                </div>
+                <div class="box">
+                    <div class="boximage">
+                       <img src="images/payment.png"/>
+                    </div>
+                    <h4>payment functionalies</h4>
+                    <p>We get insulted by others, lose trust for those We get back freezes</p>
+                </div>
+            </div>
+            <div class="boxes">
+                <div class="box">
+                    <div class="boximage">
+                       <img src="images/rebuilt.png"/>
+                    </div>
+                    <h4>Prebuilt components</h4>
+                    <p>We get insulted by others, lose trust for those We get back freezes</p>
+                </div>
+                <div class="box">
+                    <div class="boximage">
+                       <img src="images/platform.png"/>
+                    </div>
+                    <h4>improved platform</h4>
+                    <p>We get insulted by others, lose trust for those We get back freezes</p>
+                </div>
+            </div>
+        </div>
+        <div class="insightimage">
+              <div class="imagery">
+                <img src="images/insite.png"/>
+              </div>
+              <h4>Get insight on search</h4>
+              <p>Website visitors today demand a frictionless user expericence — especially when using search. Because of the hight standards.</p>
+        </div>
+    </div>
+    <div class="executive">
+    <div class="topexecutive">
+       <h4>The executive Team</h4>
+       <p>There’s nothing I really wanted to do in life that I wasn’t able to get good at. That’s my skill.</p>
+    </div>    
+    <div class="executivecards">
+       <div class="cards">
+         <div class="card">
+            <div class="cardimage">
+                <img src="images/emma.png" alt="img"/>
+            </div>
+            <div class="cardtext">
+                <h4>Emma Roberts</h4>
+                <h6>Ui desigher</h6>
+                <P>Artist is a term applied to a person who engages in an activity deemed to be an art.</P>
+            </div>
+         </div>
+         <div class="card">
+            <div class="cardimage">
+                <img src="images/william.png" alt="img"/>
+            </div>
+            <div class="cardtext">
+                <h4>william Pearce</h4>
+                <h6>Boss</h6>
+                <P>Artist is a term applied to a person who engages in an activity deemed to be an art.</P>
+            </div>
+         </div>
+       </div>
+       <div class="cards">
+         <div class="card">
+            <div class="cardimage">
+                <img src="images/ivana.png" alt="img"/>
+            </div>
+            <div class="cardtext">
+                <h4>Ivana Flow</h4>
+                <h6>Athletes</h6>
+                <P>Artist is a term applied to a person who engages in an activity deemed to be an art.</P>
+            </div>
+         </div>
+         <div class="card">
+            <div class="cardimage">
+                <img src="images/sophia.png" alt="img"/>
+            </div>
+            <div class="cardtext">
+                <h4>Sophia Garcia</h4>
+                <h6>js Developer</h6>
+                <P>Artist is a term applied to a person who engages in an activity deemed to be an art.</P>
+            </div>
+         </div>
+       </div>
+    </div>
+    </div>
+       <div class="wrap">
+        <div class="sponsors">
+            <div class="sponsorimage">
+                <img src="/images/coinbase.png"/> 
+            </div>
+            <div class="sponsorimage">
+                <img src="/images/nasa.png"/>
+            </div>
+            <div class="sponsorimage">
+                <img src="/images/netflix.png"/>
+            </div>
+            <div class="sponsorimage">
+                <img src="/images/pintrest.png"/>
+            </div>
+            <div class="sponsorimage">
+                <img src="/images/spotify.png"/>
+            </div>    
+            <div class="sponsorimage">
+                <img src="/images/vodafone.png"/>
+            </div>
+        </div>
+        <div class="project">
+            <div class="support">
+                <h2>5,234</h2>
+                <h6>Projects</h6>
+                <p>Of “high-performing” level are led by a certified project manager</p>
+            </div>
+            <div class="support">
+                <h2>3,400+</h2>
+                <h6>Hour</h6>
+                <p>That meets quality standards required by our users</p>
+            </div>
+            <div class="support">
+                <h2>24/7</h2>
+                <h6>support</h6>
+                <p>Actively engage team members that finishes on time</p>
+            </div>
+        </div>
+       </div>
+       <div class="news">
+         <div class="newstext">
+            <h3>Be the first to see the news</h3>
+            <p>Your company may not be in the software business, but eventually, a software company will be in your business.</p>
+            <form class="subscribe">
+                <input type="text" name="Email" placeholder="Email here...">
+                <button>subscribe</button>
+            </form>
+         </div>
+         <div class="newsimage">
+          <img src="/images/software.png"/>
+         </div>
+       </div>
     </div>
 </body>
 </html>
