--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="prototype">
             <div class="prototypetext">
                 <h2>lightning fast prototype</h2>
-                <p>most calenders are designed for teams .slate is designed for freelancers</p>
+                <p>most calenders are designed for teams.slate is designed for freelancers</p>
                 <button>Try for free</button>
             </div>
             <div class="prototypeImage">
@@ -99,10 +99,14 @@
                 <p>lightning fast prototyping</p>
                 <h2>subscribe to our newsletter</h2>
                 <h3>Available exclusivery on Figmaland</h3>
+               <div>
                 <form>
                     <input type="text" name="Email" placeholder="your email" />
                 </form>
+               </div>
+               <div class="bttn">
                 <button>subscribe</button>
+            </div>
             </div>
         </div> 
         <div class="partners">
